<resources>
    <string name="app_name">ProyMovilII</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sugerencias">Sugerencias</string>
    <string name="contactos">Contactos</string>
    <string name="lista_de_deseos">Lista de Deseos</string>
    <string name="mi_perfil">Mi Perfil</string>
    <string name="como_encontrarnos">Como Encontrarnos</string>
    <string name="acerca_de_nosotros">Acerca de Nosotros</string>
    <string name="principal_page">Principal Page</string>
    <string name="pagina_principal">Pagina Principal</string>
</resources>